[workspace]
members = ["cli_interface","core_engine"
    # Add your individual crate folder names here:
    # "core_engine",
    # "cli_interface",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["wildduck2 <duckui@duck.com>"]
description = "A high-performance, embedded database management system for Rust."
license = "MIT"
repository = "github.com"
keywords = ["database", "embedded", "storage", "sql", "data"]
categories = ["database", "development-tools", "embedded-database"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"

ttlog = "0.1.16"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

