[package]
name = "core_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ttlog.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true


[dev-dependencies]
